登録処理(API)の機能を追加
